--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "[800 rows x 11 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,11 +297,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-statistic: 2.5827360636587904\n",
+      "P-value (one-tailed): 0.005746459334608705\n",
+      "Reject the null hypothesis: Dragon-type Pokémon have significantly higher HP.\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "# Dragon + Grass\n",
+    "\n",
+    "import pandas as pd\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "import pandas as pd\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "# Dragon-type and Grass-type Pokémon\n",
+    "dragon_hp = df[df['Type 2'] == 'Dragon']['HP']\n",
+    "grass_hp = df[df['Type 1'] == 'Grass']['HP']\n",
+    "\n",
+    "# Conduct the Two Sample T-Test\n",
+    "t_stat, p_value = stats.ttest_ind(dragon_hp, grass_hp, equal_var=True)\n",
+    "\n",
+    "# Since we are testing if Dragon HP is greater than Grass HP, we need a one-tailed test\n",
+    "p_value_one_tailed = p_value / 2 if t_stat > 0 else 1 - (p_value / 2)\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"T-statistic: {t_stat}\")\n",
+    "print(f\"P-value (one-tailed): {p_value_one_tailed}\")\n",
+    "\n",
+    "# Decision\n",
+    "if p_value_one_tailed < 0.05:\n",
+    "    print(\"Reject the null hypothesis: Dragon-type Pokémon have significantly higher HP.\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis: No significant difference in HP.\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -313,11 +351,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANOVA test for HP: F-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for HP: No significant difference.\n",
+      "\n",
+      "ANOVA test for Attack: F-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for Attack: No significant difference.\n",
+      "\n",
+      "ANOVA test for Defense: F-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for Defense: No significant difference.\n",
+      "\n",
+      "ANOVA test for Sp. Atk: F-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for Sp. Atk: No significant difference.\n",
+      "\n",
+      "ANOVA test for Sp. Def: F-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for Sp. Def: No significant difference.\n",
+      "\n",
+      "ANOVA test for Speed: F-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for Speed: No significant difference.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Elechiguerra\\anaconda3\\envs\\labs_ih\\Lib\\site-packages\\scipy\\stats\\_stats_py.py:4102: DegenerateDataWarning: at least one input has length 0\n",
+      "  if _f_oneway_is_too_small(samples):\n"
+     ]
+    }
+   ],
    "source": [
-    "#code here"
+    "# ANOVA \n",
+    "\n",
+    "import pandas as pd\n",
+    "from scipy.stats import f_oneway  \n",
+    "\n",
+    "# List of stats to analyze\n",
+    "stats_columns = ['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']\n",
+    "\n",
+    "# Perform ANOVA for each stat\n",
+    "for stat in stats_columns:\n",
+    "    legendary_stats = df[df['Legendary'] == 'True'][stat]\n",
+    "    non_legendary_stats = df[df['Legendary'] == 'False'][stat]\n",
+    "\n",
+    "    # Perform one-way ANOVA\n",
+    "    f_stat, p_value = f_oneway(legendary_stats, non_legendary_stats)\n",
+    "    \n",
+    "    print(f\"ANOVA test for {stat}: F-statistic = {f_stat}, p-value = {p_value}\")\n",
+    "\n",
+    "    if p_value < 0.05:\n",
+    "        print(f\"Reject the null hypothesis for {stat}: Significant difference exists.\\n\")\n",
+    "    else:\n",
+    "        print(f\"Fail to reject the null hypothesis for {stat}: No significant difference.\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kruskal-Wallis test for HP: H-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for HP: No significant difference.\n",
+      "\n",
+      "Kruskal-Wallis test for Attack: H-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for Attack: No significant difference.\n",
+      "\n",
+      "Kruskal-Wallis test for Defense: H-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for Defense: No significant difference.\n",
+      "\n",
+      "Kruskal-Wallis test for Sp. Atk: H-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for Sp. Atk: No significant difference.\n",
+      "\n",
+      "Kruskal-Wallis test for Sp. Def: H-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for Sp. Def: No significant difference.\n",
+      "\n",
+      "Kruskal-Wallis test for Speed: H-statistic = nan, p-value = nan\n",
+      "Fail to reject the null hypothesis for Speed: No significant difference.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import kruskal\n",
+    "\n",
+    "# Conduct the Kruskal-Wallis test for each stat\n",
+    "for stat in ['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']:\n",
+    "    legendary_stats = df[df['Legendary'] == 'True'][stat]\n",
+    "    non_legendary_stats = df[df['Legendary'] == 'False'][stat]\n",
+    "\n",
+    "    h_stat, p_value = kruskal(legendary_stats, non_legendary_stats)\n",
+    "    \n",
+    "    print(f\"Kruskal-Wallis test for {stat}: H-statistic = {h_stat}, p-value = {p_value}\")\n",
+    "\n",
+    "    if p_value < 0.05:\n",
+    "        print(f\"Reject the null hypothesis for {stat}: Significant difference exists.\\n\")\n",
+    "    else:\n",
+    "        print(f\"Fail to reject the null hypothesis for {stat}: No significant difference.\\n\")\n"
    ]
   },
   {
@@ -337,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +593,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,17 +623,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Elechiguerra\\AppData\\Local\\Temp\\ipykernel_9552\\683679518.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  return np.sqrt((row[0] - coords[0])**2 + (row[1] - coords[1])**2)\n",
+      "C:\\Users\\Elechiguerra\\AppData\\Local\\Temp\\ipykernel_9552\\683679518.py:11: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  return np.sqrt((row[0] - coords[0])**2 + (row[1] - coords[1])**2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-statistic: -17.174167998688404, P-value: 5.220018561223529e-05\n",
+      "Reject the null hypothesis: There is a significant difference in prices.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Coordinates for school and hospital\n",
+    "school_coords = (-118, 37)\n",
+    "hospital_coords = (-122, 34)\n",
+    "\n",
+    "# Function to calculate Euclidean distance\n",
+    "def calculate_distance(row, coords):\n",
+    "    return np.sqrt((row[0] - coords[0])**2 + (row[1] - coords[1])**2)\n",
+    "\n",
+    "# Calculate distances to school and hospital\n",
+    "df['distance_to_school'] = df.apply(calculate_distance, axis=1, args=(school_coords,))\n",
+    "df['distance_to_hospital'] = df.apply(calculate_distance, axis=1, args=(hospital_coords,))\n",
+    "\n",
+    "# Define threshold distance\n",
+    "threshold_distance = 0.50\n",
+    "\n",
+    "# Create a new column to identify close houses\n",
+    "df['close_to_school'] = df['distance_to_school'] < threshold_distance\n",
+    "df['close_to_hospital'] = df['distance_to_hospital'] < threshold_distance\n",
+    "df['close_to_either'] = df['close_to_school'] | df['close_to_hospital']\n",
+    "\n",
+    "# Prices of the two groups\n",
+    "close_prices = df[df['close_to_either']]['median_house_value']\n",
+    "far_prices = df[~df['close_to_either']]['median_house_value']\n",
+    "\n",
+    "# Perform independent t-test\n",
+    "t_stat, p_value = stats.ttest_ind(close_prices, far_prices, equal_var=False)\n",
+    "\n",
+    "# Output results\n",
+    "alpha = 0.05  # Significance level\n",
+    "print(f\"T-statistic: {t_stat}, P-value: {p_value}\")\n",
+    "\n",
+    "# Conclusion\n",
+    "if p_value < alpha:\n",
+    "    conclusion = \"Reject the null hypothesis: There is a significant difference in prices.\"\n",
+    "else:\n",
+    "    conclusion = \"Fail to reject the null hypothesis: There is no significant difference in prices.\"\n",
+    "\n",
+    "print(conclusion)\n"
+   ]
   }
  ],
  "metadata": {
@@ -512,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
